<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/boton3"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="48dp"


        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:text="@string/activity4"
        android:textColor="@color/black"
        app:backgroundTint="#43B1E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton2" />

    <TextView
        android:id="@+id/Textobienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/Bienvenido_a_tonitos"

        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tonitos"
        android:layout_width="166dp"
        android:layout_height="217dp"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textobienvenido"
        app:srcCompat="@drawable/tonin" />

    <Button
        android:id="@+id/boton1"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="48dp"


        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:text="@string/activity2"
        android:textColor="@color/black"
        app:backgroundTint="#43B1E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tonitos" />

    <Button
        android:id="@+id/boton2"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="48dp"


        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:text="@string/activity3"
        android:textColor="@color/black"
        app:backgroundTint="#43B1E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton1" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:text="@string/salir"
        android:textColor="@color/black"
        app:backgroundTint="#43B1E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton3"
        app:layout_constraintVertical_bias="0.021" />


</androidx.constraintlayout.widget.ConstraintLayout>